apps/gitea-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  selector:
    app: gitea
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  - port: 22
    targetPort: ssh
    protocol: TCP
    name: ssh
